feat: Elevate API to professional-grade architecture and add core features
This foundational commit transforms the initial prototype into a full-fledged, industry-standard REST API by implementing a robust layered architecture and a suite of professional features.

It moves beyond the basic CRUD model to incorporate best practices for security, maintainability, and user experience.

Key architectural and feature upgrades include:

- **Complete Refactor to a 3-Layer Architecture:** Introduced a dedicated Service layer to handle all business logic, cleanly separating it from the Controller and Repository layers.

- **Introduction of Data Transfer Objects (DTOs):** Replaced direct JPA entity exposure with DTOs and MapStruct for a stable, secure, and flexible API contract.

- **Robust API Security:** Implemented Spring Security with HTTP Basic Authentication, establishing role-based access control (ADMIN/USER) for write and read operations.

- **Enhanced API Robustness:** Added server-side input validation and a global exception handling mechanism to provide clear, consistent error responses.

- **Comprehensive Project Documentation:** Created a polished and professional README.md, providing a full project overview, feature list, and detailed setup/usage instructions.

- **Build System Fix:** Corrected the Maven build configuration to enable annotation processing for both MapStruct and Lombok, resolving critical dependency injection failures.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,19 @@ spring.application.name=bookstore
 # Server Port
 server.port=8080
 
-# H2 Database
+# H2 Database Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# Datasource Properties
-spring.datasource.url=jdbc:h2:mem:bookstoredb
+# H2 Datasource Properties
+spring.datasource.url=jdbc:h2:mem:bookstoredb;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Show SQL statements in the console
+# Let Hibernate create the schema automatically for us
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Swagger UI Path
+springdoc.swagger-ui.path=/swagger-ui.html
